--- a/css/admin_FAQ.css
+++ b/css/admin_FAQ.css
@@ -1,3 +1,6 @@
+#home_link {
+  border-bottom: none;
+}
 #left_nav #bookings_nav {
   background-color: white;
 }
@@ -7,4 +10,73 @@
 main {
   display: flex;
   justify-content: space-between;
+}
+#addque_view_box {
+  width: 65%;
+}
+#addque_view_box #newque_box{
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+#addque_view_box #newque_box textarea{
+  font-size: 1vw;
+  padding: 5% 0px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  width: 100%;
+  resize: vertical;
+  /* background-color: rgb(217, 217, 217); */
+  border: none;
+  text-align: center;
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+}
+
+#addque_view_box #newque_box button{
+  margin: 4% 0px;
+  padding: 2% 5%;
+  border: none;
+  box-shadow: 1px 2px 3px rgb(82, 77, 77);
+  background-color: rgb(255, 199, 183);
+  color: white;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+#addque_view_box h2 {
+  margin-top: 5%;
+  color: rgb(144, 144, 144);
+}
+
+#addque_view_box .que_item {
+  margin-top: 5%;
+  background-color: white;
+  padding: 2%;
+  border-radius: 20px;
+}
+
+#addque_view_box .que_item button {
+  background-color: white;
+  border: none;
+  color: white;
+  cursor: pointer;
+  margin-top: 2%;
+  padding: 1% 4%;
+  box-shadow: 1px 2px 3px rgb(82, 77, 77);
+  background-color: rgb(255, 199, 183);
+  border-radius: 20px;
 }
