--- a/css/style.css
+++ b/css/style.css
@@ -51,29 +51,48 @@ header #nav #nav_left b {
 header #nav #nav_left img {
   padding-bottom: 0px;
 }
-/* header #nav #nav_right img {
-  padding-bottom: 0px;
-} */
+header #nav #nav_right img {
+  margin-top: 5px;
+}
 /* phone */
-@media screen and (max-width: 551px) {
-  header #nav #nav_left, header #nav_right img {
+@media screen and (max-width: 695px) {
+  header #nav #nav_left, header #nav_right img, #username {
     display: none;
   }
   header #nav #nav_right{
     width: 100%;
+    display: flex;
+    justify-content: space-around;
+    
   }
   header #nav_login_ch {
     display: block;
     text-align: center;
-    width: 15.5%;
+    width: 29.5%;
     box-shadow: 1px 2px 3px rgb(82, 77, 77);
     background-color: rgb(200, 183, 250);
     color: white;
     border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+  }
+  header #nav #nav_book {
+    width: 95%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
-
-
+@media screen and (max-width: 429px) {
+  header #nav_login_ch { 
+    width: 95%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 #home_link {
   border-bottom: 2px solid black;
 }
@@ -82,13 +101,19 @@ header #nav #nav_left img {
  cursor: pointer;
 }
 
-header .loge, #user {
+header .loge, #user img {
   cursor: pointer;
   width: 50px;
   /* padding-top: 15px; */
 }
+header #user {
+  margin: 0px;
+  padding: 0xp;
+}
 header #nav_right img{
-    padding-top: 15px;
+  padding: 0px;
+  margin: 0px;
+    /* padding-top: 15px; */
 }
 header div ul li{
   float: left;
@@ -112,16 +137,6 @@ header #nav_book, #ser_book{
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
 }
-/* phone */
-@media screen and (max-width: 508px) {
-  header #nav #nav_book {
-    width: 95%;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
 
 /* main */
 #main_img {
@@ -143,10 +158,7 @@ header #nav_book, #ser_book{
 #main_img img {
   width: 100%;
 }
-#our_services {
-  /* display: flex; */
-  /* justify-content: space-between; */
-}
+
 #our_services h1{
   font-size: 2vw;
   text-align: center;
@@ -225,7 +237,7 @@ footer ul {
 
 footer li {
   margin: 20px;
-  padding: 20px 30px;
+  padding: 10px 20px;
   background-color: rgb(217, 217, 217);
   border-radius: 25px;
   -webkit-border-radius: 25px;
@@ -233,7 +245,10 @@ footer li {
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
 }
-@media screen and (max-width: 320px) {
+#footer_icon img{
+  width: 50px;
+}
+@media screen and (max-width: 410px) {
   footer li {
   margin: 10px;
   }
@@ -282,6 +297,13 @@ footer li {
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
+}
+
+#left_nav #logout p { 
+  margin: 0px;
+}
+header h3{
+  margin-bottom: 0px;
 }
 #main_box {
   margin-top: 4px;
