--- a/css/admin_book.css
+++ b/css/admin_book.css
@@ -13,9 +13,12 @@ main {
 }
 
 .ad_bookings {
+  font-size: 1vw;
   display: flex;
+  flex-direction: column;
   background-color: white;
   margin-top: 5%;
+  font-weight: bolder;
   padding: 5%;
   border-radius: 15px;
   -webkit-border-radius: 15px;
@@ -23,24 +26,25 @@ main {
   -ms-border-radius: 15px;
   -o-border-radius: 15px;
 }
-
+.ad_bbut_box {
+  margin-top: 5%;
+  width: 100%;
+  font-size: 1.5vw;
+}
 .ad_bookings img {
   width: 50px;
   height: 100%;
-  margin: 0 5%
+  margin-right: 2%;
 }
 
-
-.ad_bookings div h2{
-  margin-bottom: 10%;
-}
-
-.ad_bookings div button{
-  margin-top: 15%;
-  padding: 5% 10%;
+.ad_bookings .ad_bbut_box button{
+  font-size: 1vw;
+  float: right;
+  justify-content: flex-end;
+  padding: 2% 5%;
   border: none;
   box-shadow: 1px 2px 3px rgb(82, 77, 77);
-  background-color: rgb(255, 199, 183);
+  background-color: rgb(217, 217, 217);
   color: white;
   border-radius: 20px;
   
