--- a/css/admin_questions.css
+++ b/css/admin_questions.css
@@ -95,7 +95,7 @@ header h3{
   margin-top: 2%;
   padding: 1% 4%;
   box-shadow: 1px 2px 3px rgb(82, 77, 77);
-  background-color: rgb(255, 199, 183);
+  background-color: rgb(217,217,217);
   border-radius: 20px;
 }
 #inbox {
@@ -114,14 +114,27 @@ header h3{
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
 }
-#inbox img {
+#inbox #inbox_title img {
   height: 20px;
-  margin: 5%;
+    
+  /* margin: 5%; */
+  
 }
 #inbox #inbox_title {
   display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 2%;
 }
-
+#inbox #inbox_title h3{
+  margin-bottom: 0px;
+  margin-left: 2%;
+}
 .card-header h2 button, .card-body{
   color: black;
 }
+.card-body img{ 
+  width: 20px;
+  float: right;
+}
+
