--- a/css/FAQ.css
+++ b/css/FAQ.css
@@ -1,4 +1,3 @@
-
 main {
   /* width: 60%; */
   margin: 4px auto 0px auto;
@@ -6,7 +5,10 @@ main {
 }
 header h3 {
   margin: 0px;
-}
+  font-family: 'Manrope', sans-serif;
+
+  font-size: 100%;}
+
 #home_link {
   border-bottom: none;
 }
@@ -19,12 +21,19 @@ header h3 {
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 5%;
+  font-size: 80%;
+  font-family: 'Manrope', sans-serif;
+
+
+
 }
 h1 {
   padding-left: 20%;
   padding-top: 5%;
   color: white;
-  font-size: 2vw;
+  font-size: 110%;
+  font-family: 'Manrope', sans-serif;
+
 }
 .card {
   background-color: rgb(224, 211, 252);
@@ -36,80 +45,107 @@ h1 {
   /* padding-top: 5%; */
   margin-top: 2%;
   border-radius: 25px;
-  -webkit-border-radius: 25px;
+  -webkit-border-radius: 5px;
   -moz-border-radius: 25px;
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
+  font-family: 'Manrope', sans-serif;
+
+  
 }
 
 .card-header h2 button{
-  font-size: 1.2vw;
   color: black;
   font-weight: bolder;
+  
+}
+
+.card-header{
+  font-size: 70%;
+
 }
 
 .card-header h2 button, .card-body{
   color: black;
+  font-size: 70%;
 }
 
 #headingOne, #headingTwo, #headingThree, #headingFour {
   border-radius: 25px;
-  -webkit-border-radius: 25px;
+  -webkit-border-radius: 2px;
   -moz-border-radius: 25px;
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
+  font-size: 70%;
+  
+
 }
 
 .FAQ_item, .card-header{
   margin-top: 5%;
   background-color: white;
+  font-size: 70%;
   padding: 3%;
   border-radius: 25px;
-  -webkit-border-radius: 25px;
+  -webkit-border-radius: 2px;
   -moz-border-radius: 25px;
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
 }
 .FAQ_item b {
-  font-size: 1.5vw;
+  font-size: 60%;
 }
 
 .accordion .card .h2 button {
-  font-size: 1.5vw;
+  font-size: 60%;
 }
 #contact_box {
   width: 100%;
   background-color: white;
+  height: min-content;
+  font-size: 70%;
+  font-family: 'Manrope', sans-serif;
+
+
 
 }
 #contact_box h3 {
-  color: black;
-  font-size: 2vw;
-  text-align: center;
+  color: black(125, 49, 49);
+  font-size: 100%;
+  text-align: left;
+  padding-left: 290px;
   padding-top: 3%;
-  padding-bottom: 3%;
+  padding-bottom: 0%;
+  font-family: 'Manrope', sans-serif;
+
+
   /* margin: 0px; */
 }
 #contact_box form{
   display: flex;
   flex-direction: column;
   width: 60%;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
+  
 }
 #contact_box form input {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   text-align: center;
   margin: 2% 0px;
   padding: 3%;
-  background-color: rgb(217, 217, 217);
+  background-color: white;
+  outline: auto rgb(217, 217, 217);
   border: none;
-  font-size: 1vw;
+  font-size: 60%;
   border-radius: 25px;
-  -webkit-border-radius: 25px;
+  -webkit-border-radius: 5px;
   -moz-border-radius: 25px;
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
+  font-family: 'Manrope', sans-serif;
+
 }
 #contact_box form input:focus {
   outline: 4px solid rgb(255, 199, 183);
@@ -120,17 +156,19 @@ h1 {
   cursor: pointer;
 }
 #contact_box form textarea{
-  font-size: 1vw;
   padding: 5% 0px;
   margin-top: 2%;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   width: 100%;
+  height: 70px;
+  font-size: 60%;
   resize: vertical;
-  background-color: rgb(217, 217, 217);
+  background-color: white;
   border: none;
+  outline: auto rgb(217, 217, 217);
   text-align: center;
   border-radius: 25px;
-  -webkit-border-radius: 25px;
+  -webkit-border-radius:5px;
   -moz-border-radius: 25px;
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
@@ -138,5 +176,4 @@ h1 {
 
 #contact_box form textarea:focus {
   outline: 4px solid rgb(255, 199, 183);
-  text-align: left;
 }
