--- a/css/account.css
+++ b/css/account.css
@@ -12,6 +12,8 @@ h2 {
   color: white;
   margin-bottom: 3%;
   font-size: 2.5vw;
+  font-family: 'Manrope', sans-serif;
+
 }
 #account_box {
   display: flex;
@@ -24,6 +26,7 @@ h2 {
   text-align: center;
   color: white;
   font-size: 1.5vw;
+  font-family: 'Manrope', sans-serif;
   padding: 3% 0px;
   border-bottom: 2px solid white;
   cursor: pointer;
@@ -60,9 +63,12 @@ h2 {
 }
 .book_info, .book_option {
   margin: 0px 2%;
+  font-family: 'Manrope', sans-serif;
+
 }
 .book_option {
   font-weight: bolder;
+  font-family: 'Manrope', sans-serif;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -73,4 +79,6 @@ h2 {
   border: none;
   font-weight: bolder;
   padding: 5% 4%;
+  font-family: 'Manrope', sans-serif;
+
 }
