--- a/css/blog.css
+++ b/css/blog.css
@@ -16,6 +16,7 @@ main {
 h1 {
   color: white;
   font-size: 2vw;
+  font-family: 'Manrope', sans-serif;
 }
 
 .blog_item {
@@ -23,10 +24,12 @@ h1 {
   background-color: white;
   padding: 5%;
   border-radius: 25px;
-  -webkit-border-radius: 25px;
+  -webkit-border-radius: 5px;
   -moz-border-radius: 25px;
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
+  font-family: 'Manrope', sans-serif;
+
 }
 
 .blog_item p {
