--- a/css/book.css
+++ b/css/book.css
@@ -23,15 +23,17 @@ h1 {
   padding-top: 5%;
   color: white;
   font-size: 2.5vw;
-}
+  font-family: 'Manrope', sans-serif;}
 header h3 {
   margin: 0px;
+  font-family: 'Manrope', sans-serif;
 }
 #book_box {
   width: 60%;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 5%;
+  font-family: 'Manrope', sans-serif;
 }
 
 #date_box {
