--- a/css/FAQ.css
+++ b/css/FAQ.css
@@ -31,7 +31,7 @@ h1 {
   padding-left: 20%;
   padding-top: 5%;
   color: white;
-  font-size: 110%;
+  font-size: 2vw;
   font-family: 'Manrope', sans-serif;
 
 }
