--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ header #nav_book, #ser_book{
 }
 
 footer {
-  margin-top: 30px;
+  margin-top: 8%;
   color: white;
   background-color: rgb(200, 183, 250);
   display: flex;
