--- a/css/FAQ.css
+++ b/css/FAQ.css
@@ -102,7 +102,7 @@ h1 {
 #contact_box {
   width: 100%;
   background-color: white;
-  height: min-content;
+/*   height: min-content; */
   font-size: 70%;
   font-family: 'Manrope', sans-serif;
 
@@ -111,9 +111,9 @@ h1 {
 }
 #contact_box h3 {
   color: black(125, 49, 49);
-  font-size: 100%;
+  font-size: 1vm;
   text-align: left;
-  padding-left: 290px;
+  padding-left: 20%;
   padding-top: 3%;
   padding-bottom: 0%;
   font-family: 'Manrope', sans-serif;
